--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "eslintConfig": {
-    "root": true
-  },
+  "name": "h5-standard",
   "devDependencies": {
+    "@imgcook/dsl-helper": "0.x.x",
     "co": "4.x.x",
+    "lodash": "4.x.x",
     "prettier": "^1.11.1",
     "thunkify": "2.x.x",
     "vm2": "^3.5.2",
     "xml-beautifier": "0.x.x",
     "xtemplate": "4.x.x",
-    "xtpl": "3.x.x",
-    "lodash": ">=4.17.11"
+    "xtpl": "3.x.x"
   },
   "scripts": {
-    "build": "webpack",
     "test": "node ./test/index.js"
   }
 }
