--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "h5-standard",
   "devDependencies": {
-    "@imgcook/dsl-helper": "0.x.x",
-    "co": "4.x.x",
-    "lodash": "4.x.x",
+    "@imgcook/dsl-helper": "^0.0.1-alpha.0",
+    "co": "^4.6.0",
+    "lodash": "^4.17.11",
     "prettier": "^1.11.1",
-    "thunkify": "2.x.x",
-    "vm2": "^3.5.2",
-    "xml-beautifier": "0.x.x",
-    "xtemplate": "4.x.x",
-    "xtpl": "3.x.x"
+    "thunkify": "^2.1.2",
+    "vm2": "^3.8.0",
+    "xml-beautifier": "^0.4.0",
+    "xtemplate": "^4.6.1",
+    "xtpl": "^3.4.0"
   },
   "scripts": {
     "test": "node ./test/index.js"
