feat: beauty html

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@imgcook/dsl-helper": "^0.0.1-alpha.0",
     "co": "^4.6.0",
     "lodash": "^4.17.15",
-    "prettier": "^1.11.1",
+    "prettier": "1.x.x",
     "thunkify": "^2.1.2",
     "vm2": "^3.8.0",
     "xml-beautifier": "^0.4.0",
