feat: 支持静态动态，多种代码风格

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "debug": "npx webpack --config webpack.config.js --mode=development",
     "build": "npx webpack --config webpack.config.js --mode=production",
-    "test": "npm run build && node ./test/index.js"
+    "test": "npm run build && node ./test/index.js",
+    "start": "node ./test/index.js"
   }
 }
