--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.0.10",
   "devDependencies": {
     "@imgcook/dsl-helper": "^0.0.1-alpha.0",
+    "@types/node": "^16.11.7",
+    "chai": "^4.3.4",
     "co": "^4.6.0",
     "css": "^3.0.0",
     "lodash": "^4.17.19",
     "lodash.find": "^4.6.0",
     "lodash.unset": "^4.5.2",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
     "prettier": "1.x.x",
     "thunkify": "^2.1.2",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.4.4",
     "vm2": "^3.8.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
@@ -21,7 +27,9 @@
   "scripts": {
     "debug": "npx webpack --config webpack.config.js --mode=development",
     "build": "npx webpack --config webpack.config.js --mode=production",
-    "test": "npm run build && node ./test/index.js",
-    "start": "node ./test/index.js"
+    "demo": "node ./test/index.js",
+    "test": "mocha  --colors test/**/*.test.js",
+    "start": "node ./test/index.js",
+    "test-with-coverage": "nyc --reporter=html mocha --exit  --colors test/**/*.test.js "
   }
 }
