--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lodash.unset": "^4.5.2",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
-    "prettier": "1.x.x",
+    "prettier": "^2.4.1",
     "thunkify": "^2.1.2",
     "ts-loader": "^8.2.0",
     "typescript": "^4.4.4",
