--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
+    "request": "^2.88.2",
     "thunkify": "^2.1.2",
     "ts-loader": "^8.2.0",
     "typescript": "^4.4.4",
